test/simple/typeerrors/Examples/AltLeft.hs
module AltLeft where

f = case "paard" of
      True -> "veulen" 
